--- a/jcard.css
+++ b/jcard.css
@@ -138,10 +138,11 @@ max-width: 100%;
 } 
 
 button {
-    width: 70%
+    width: 50%
 }
 input {
-    width: 50%
+    width: 100%;
+    height: 2em;
 }
 input#yoyaku {
     width: 100%
