--- a/jcard.css
+++ b/jcard.css
@@ -1,135 +1,5 @@
 @charset "UTF-8";
 
-.popupModal1 > input { /* ラジオボックス非表示 */
-    display: none;
-}
-.popupModal1 > input:nth-child(1) + label { 
-    cursor: pointer;
-}
-.modalPopup2 { /* 初期設定 ポップアップ非表示 */
-    display: none;
-}
-
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 {/* ラジオ１ チェックでポップアップ表示 */
-    display: block;
-    z-index: 998;
-    position: fixed;
-    width: 90%;
-    height: 80%;
-    border-radius: 20px;
-    left: 50%;
-    top: 50%;
-    margin-top: 30px;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    background: #fff;
-    padding: 10px 20px;
-    overflow: hidden;
-}
-@media (min-width: 768px) {/* PCのときはページの真ん中の600x600領域 */
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2{
-         width: 600px;
-         height: 600px;
-         padding: 30px;
-
-    }
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-     left: 50% !important;
-     top: 50% !important;
-     margin-left: 270px !important;
-     margin-top: -310px !important;
-}
-}
-
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div {/* */
-    overflow:auto;
-    -webkit-overflow-scrolling:touch;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > iframe {
-    width: 100%;
-      height:100%;
-      border:none;
-      display:block;
-}
-
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > img {/* ポップアップの中の要素 */
-max-width: 100%;
-}
-.popupModal1 > input:nth-child(1) + label ~ label {
-    display: none;/* ラジオ１ 以外のラベルを初期は非表示 */
-
-}
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.70);
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 997;
-    text-indent: -999999px;
-    overflow: hidden;
-}
-.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
-    background: rgba(255, 255, 255, 0.5);
-    display: inline-block;
-    position: fixed;
-    left: 10px;
-    bottom: 20px;
-    z-index: 999;
-    width: 44pt;
-    height: 44pt;
-    font-size: 40px;
-    border-radius: 50%;
-    line-height: 44pt;
-    text-align: center;
-    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-.popupModal1 > input:nth-child(1) + label + input:nth-child(3):checked + label + input:nth-child(5) + label + .modalPopup2,
-.popupModal1 > input:nth-child(1) + label + input:nth-child(3) + label + input:nth-child(5):checked + label + .modalPopup2 { /* ラジオ２と３ どっちかチェックでポップアップ非表示 */
-    display: none;
-}
-
-
-.modalPopup2 {
-    animation: fadeIn 1s ease 0s 1 normal;
-    -webkit-animation: fadeIn 1s ease 0s 1 normal;
-}
-
-@keyframes fadeIn {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-
-@-webkit-keyframes fadeIn {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-
-.popupModal1 .modalTitle {
-     padding-bottom: .5em;
-     margin: .5em 0;
-     border-bottom:
-     1px solid #ccc;
-     font-weight: bold;
-}
-.popupModal1 .modalMain {
-     color:#222;
-     text-align: left;
-     font-size: 14px;
-     line-height: 1.8em;
-}
-
-
-
-
-
 /*============================================
 全般的なスタイル
 ============================================*/
@@ -138,7 +8,7 @@ max-width: 100%;
 } 
 
 button {
-    width: 50%
+    width: 150px;
 }
 input {
     width: 100%;
@@ -146,45 +16,6 @@ input {
 }
 input#yoyaku {
     width: 100%
-}
-
-@media only screen and (max-width: 1023px) {
-
-	#header{
-		overflow: scroll;
-	}
-	#lt{
-		overflow: scroll;
-	}
-	iframe {
-		overflow: scroll;
-	}
-
-} /*デバイスの横幅が1023px以下の場合*/
-
-
-@media print {
-	#header{
-		height: 80px;
-		padding:0px;		/*見出し内容の位置調整*/
-		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:center;
-		background-color:#daeff5;	/*ページ全体の背景色*/
-		color:#FFFFFF;
-		/* background-image:url(image/HP_Back.png) */
-		overflow: scroll;
-	}
-	#main{
-		position: absolute;
-		left: 0px;
-		top: 80px;
-		right: 0px;
-		bottom: 0px;
-//		overflow: auto;
-		background-color: #ffffff;
-		color: #000000;
-	}
-	#lt { display: hidden; }
 }
 
 @media screen {
@@ -218,7 +49,7 @@ input#yoyaku {
 		top: 80px;
 		bottom: 0px;
 		width: 200px;
-		overflow: hidden;
+		//overflow: hidden;
 		z-index: 99;
 	}
 	#main{
