--- a/jcard.css
+++ b/jcard.css
@@ -43,18 +43,10 @@ input#yoyaku {
 		/* background-image:url(image/HP_Back.png) */
 		overflow: scroll;
 	}
-	#lt{
-		position: absolute;
-		left: 0px;
-		top: 80px;
-		bottom: 0px;
-		width: 200px;
-		//overflow: hidden;
-		z-index: 99;
-	}
+	
 	#main{
 		position: absolute;
-		left: 200px;
+		left: 0px;
 		top: 80px;
 		right: 0px;/* Java版カード型データベース Ver 2.0.0.7・CSSファイル */
 
@@ -62,10 +54,44 @@ input#yoyaku {
 		overflow: auto;
 		background-color: #ffffff;
 		color: #000000;
+		z-index:10;
 	}
 	#main2{
 		margin: 20px;
 	}
+	
+  /* CSS */
+  #sample label{
+    position: absolute;
+	  left: 0px;
+	  top: 80px;
+    cursor: pointer;
+    z-index: 100;
+  }
+  #sample input{
+    display: none;
+  }
+  #sample input+div{
+    position: absolute;
+	  left: 0px;
+	  top: 80px;
+	  width: 0px;
+	  height: 100%;
+	  /* overflow: hidden; */
+	  z-index: 50;
+	  transition: all 500ms 0s ease;
+  }
+  #sample input:checked + #main{
+	  left: 200px;
+	  transition: all 500ms 0s ease;
+  }
+  #sample input:checked+div{
+	  width: 200px;
+	  z-index: 50;
+	  transition: all 500ms 0s ease;
+  }
+
+
 
 	/*============================================
 	目次
