--- a/jcard.css
+++ b/jcard.css
@@ -37,7 +37,8 @@ input#yoyaku {
 		height: 80px;
 		padding:0px;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:16px; font-weight:bold; text-align:center;
+		font-size:150%; font-weight:bold; text-align:center;
+		line-height: 150%;
 		background-color:#daeff5;	/*ページ全体の背景色*/
 		color:#FFFFFF;
 		/* background-image:url(image/HP_Back.png) */
@@ -50,6 +51,7 @@ input#yoyaku {
 		top: 80px;
 		right: 0px;/* Java版カード型データベース Ver 2.0.0.7・CSSファイル */
 
+		font-size: 150%;
 		bottom: 0px;
 		overflow: auto;
 		background-color: #ffffff;
@@ -112,7 +114,7 @@ input#yoyaku {
 		text-decoration:none;			/*リンクの下線を無くす*/
 		padding:0px 0px 0px 0em;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 	input {
 		text-decoration:none;			/*リンクの下線を無くす*/
@@ -123,27 +125,27 @@ input#yoyaku {
 	h1 {
 		padding:0px 0px 0px 0px;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 	h2 {
 		padding:0px 0px 0px 1em;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 	h3 {
 		padding:0px 0px 0px 2em;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 	h4 {
 		padding:0px 0px 0px 3em;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 	h5 {
 		padding:0px 0px 0px 4em;		/*見出し内容の位置調整*/
 		font-family:"ＭＳ ゴシック",sans-serif;	/*フォントの種類*/
-		font-size:100%; font-weight:bold; text-align:left;
+		font-size:150%; font-weight:bold; text-align:left;
 	}
 
 	h1#onaji {
